--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"yiisoft/yii2": "~2.0.6",
 		"yiisoft/yii2-bootstrap": "~2.0.0",
 		"yiisoft/yii2-swiftmailer": "~2.0.0",
-		"2amigos/yii2-date-picker-widget": "*"
+		"2amigos/yii2-date-picker-widget": "*",
+		"dektrium/yii2-user": "0.9.*@dev"
 	},
 	"require-dev": {
 		"yiisoft/yii2-debug": "~2.0.0",
